--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^8.0.0",
+    "axios": "^0.27.2",
     "caver-js": "^1.8.2",
     "dotenv": "^16.0.1",
     "mongoose": "^6.4.4",
