--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "axios": "^0.27.2",
     "caver-js": "^1.8.2",
     "dotenv": "^16.0.1",
+    "eth-lightwallet": "^4.0.0",
     "mongoose": "^6.4.4",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
@@ -41,6 +42,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/dotenv": "^8.2.0",
+    "@types/eth-lightwallet": "^3.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
