--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "jsx": "react",
-    "strict": true
+    "strict": true,
+    "typeRoots": ["./node_modules/@types", "@types"]
   }
 }
