--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@expo/ngrok": "^2.5.0",
+    "@react-native-community/masked-view": "0.1.11",
+    "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/bottom-tabs": "^6.3.2",
-    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native": "6.0.11",
     "@reduxjs/toolkit": "^1.8.3",
     "@rneui/base": "^4.0.0-rc.5",
     "@rneui/themed": "^4.0.0-rc.5",
@@ -30,6 +32,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0"
