--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-size-matters": "^0.4.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0"
