--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/ngrok": "^2.5.0",
+    "@react-native-community/datetimepicker": "5.1.0",
     "@react-native-community/masked-view": "0.1.11",
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/bottom-tabs": "^6.3.2",
@@ -26,6 +27,7 @@
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-font": "~10.1.0",
+    "expo-image-picker": "~13.1.1",
     "expo-location": "~14.2.2",
     "expo-status-bar": "~1.3.0",
     "prettier": "2.7.1",
