--- a/creator-client/package.json
+++ b/creator-client/package.json
@@ -15,10 +15,15 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
     "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^0.27.2",
+    "caver-js": "^1.8.2",
+    "cookies-next": "^2.1.1",
     "next": "12.2.2",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "18.2.0",
+    "react-qr-code": "^2.0.7",
     "react-redux": "^8.0.2"
   },
   "devDependencies": {
