Feat: 환경 변수 추가
- PINATA_JWT
- KAS_ACCESS_KEY_ID
- KAS_SECRET_ACCESS_KEY
- KAS_AUTHORIZATION

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,4 +4,9 @@ ALLTHATNODE_API_KEY=
 ALLTHATNODE_BAOBAB_ENDPOINT=
 JWT_SECRET_KEY=
 QR_API_KEY=
-NEXT_PUBLIC_PINATA_JWT=
+
+PINATA_JWT=
+
+KAS_ACCESS_KEY_ID=
+KAS_SECRET_ACCESS_KEY=
+KAS_AUTHORIZATION=
