Feat: cookieParser 추가 및 연결

--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "@nestjs/schedule": "^2.1.0",
     "axios": "^0.27.2",
     "caver-js": "^1.8.2",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "eth-lightwallet": "^4.0.0",
     "mongoose": "^6.4.4",
@@ -42,6 +43,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cron": "^2.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/eth-lightwallet": "^3.0.1",
