--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.11.1",
     "react-native-size-matters": "^0.4.0",
+    "react-native-svg": "^12.4.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-timer": "^1.3.6",
     "react-native-web": "0.17.7",
