--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
+    "expo-barcode-scanner": "~11.3.0",
     "expo-font": "~10.1.0",
     "expo-image-picker": "~13.1.1",
     "expo-location": "~14.2.2",
