--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/schedule": "^2.1.0",
+    "@pinata/sdk": "^1.1.26",
     "axios": "^0.27.2",
     "caver-js": "^1.8.2",
     "cookie-parser": "^1.4.6",
