--- a/server/.env.example
+++ b/server/.env.example
@@ -6,7 +6,12 @@ JWT_SECRET_KEY=
 QR_API_KEY=
 
 PINATA_JWT=
+PINATA_API_KEY= 
+PINATA_API_SECRET_KEY= 
 
 KAS_ACCESS_KEY_ID=
 KAS_SECRET_ACCESS_KEY=
 KAS_AUTHORIZATION=
+
+OWNER_PRIVATE_KEY=
+OWNER_ADDRESS=
