--- a/server/package.json
+++ b/server/package.json
@@ -54,6 +54,7 @@
     "@types/eth-lightwallet": "^3.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
