--- a/client/app.json
+++ b/client/app.json
@@ -4,10 +4,10 @@
     "slug": "ZeroTEB",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/logoImg/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/logoImg/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -22,7 +22,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/logoImg/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
       "package": "com.ZeroTEB.TT",
