--- a/creator-client/tsconfig.json
+++ b/creator-client/tsconfig.json
@@ -13,8 +13,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
-    // "types": ["@emotion/react", "@emotion/react/types/css-prop"]
+    "incremental": true,
+    "types": ["@emotion/react", "@emotion/react/types/css-prop"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", ".next"]
