--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "form-data": "^4.0.0",
+    "lottie-react-native": "5.0.1",
     "prettier": "2.7.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
