--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "jsx": "react",
     "strict": true,
-    "typeRoots": ["./node_modules/@types", "@types"]
+    "typeRoots": ["./node_modules/@types", "@types"],
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   }
 }
