--- a/creator-client/package.json
+++ b/creator-client/package.json
@@ -9,22 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/jalaali": "^2.14.0",
     "@emotion/css": "^11.9.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
+    "@mui/x-date-pickers": "^5.0.0-beta.2",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "caver-js": "^1.8.2",
     "cookies-next": "^2.1.1",
+    "date-fns": "^2.29.1",
+    "dayjs": "^1.11.4",
+    "moment-jalaali": "^0.9.6",
     "next": "12.2.2",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.2.0",
     "react-qr-code": "^2.0.7",
-    "react-redux": "^8.0.2"
+    "react-quill": "^1.3.5",
+    "react-redux": "^8.0.2",
+    "react-scroll-motion": "^0.3.0"
   },
   "devDependencies": {
     "@types/node": "18.0.6",
