Fix: favicon img

--- a/client/app.json
+++ b/client/app.json
@@ -32,7 +32,7 @@
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/icon_withoutbackground.png"
     }
   }
 }
