--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "expo-location": "~14.2.2",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.3",
     "form-data": "^4.0.0",
     "lottie-react-native": "5.0.1",
     "prettier": "2.7.1",
