--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-htmlview": "^0.16.0",
     "react-native-maps": "0.30.2",
     "react-native-pager-view": "5.4.15",
     "react-native-radio-buttons-group": "^2.2.11",
@@ -59,6 +60,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
+    "@types/react-native-htmlview": "^0.16.0",
     "@types/react-redux": "^7.1.24",
     "typescript": "~4.3.5"
   },
